--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="navbar;">
-            <a style="float: left;" class="active" href="/index.html">Home</a>
+            <a style="float: left;" class="active" href="/">Home</a>
             <a style="float: right;" href="/math.html">Games</a>
         </div>
         <h1 style="margin-top: 40%;">
