--- a/math.html
+++ b/math.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="navbar;">
-            <a style="float: left;" href="/index.html">Home</a>
+            <a style="float: left;" href="/">Home</a>
             <a style="float: right;" class="active" href="/math.html">Games</a>
         </div>
 
