omg i messed up bad

--- a/math.html
+++ b/math.html
@@ -6,12 +6,12 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="navbar;">
+        <div class="navbar">
             <a style="float: left;" href="/">Home</a>
             <a style="float: right;" class="active" href="/math.html">Games</a>
         </div>
 
-        <div style="padding-left: 30%; padding-right: 30%;">
+        <div >
         <h1 style="margin-top: 40%;">
             Fidelity
         </h1>
