--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="navbar;">
-            <a style="float: left;" class="active" href="/">Home</a>
+        <div class="navbar">
+            <a style="float: left;"\ href="/">Home</a>
             <a style="float: right;" href="/math.html">Games</a>
         </div>
 
