--- a/math.html
+++ b/math.html
@@ -8,7 +8,7 @@
     <body>
         <div class="navbar">
             <a style="float: left;" href="/">Home</a>
-            <a style="float: right;" class="active" href="/math.html">Games</a>
+            <a style="float: right;" href="/math.html">Games</a>
         </div>
 
         <div >
