--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="navbar">
             <a style="float: left; padding-left: 5%;" href="/">Home</a>
             <a style="float: right; padding-right: 5%;" href="/math.html">Games</a>
-            <p style="text-align: center; vertical-align: baseline;">Fidelity</p>
+            <p style="text-align: center; line-height: 40px;">Fidelity</p>
         </div>
 
         <br>
