--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="navbar">
+        <div style="line-height: 40px;" class="navbar">
             <a style="float: left; padding-left: 5%;" href="/">Home</a>
             <a style="float: right; padding-right: 5%;" href="/math.html">Games</a>
-            <p style="text-align: center; line-height: 40px;">Fidelity</p>
+            <p style="text-align: center; vertical-align: middle;">Fidelity</p>
         </div>
 
         <br>
