--- a/math.html
+++ b/math.html
@@ -12,11 +12,17 @@
             <p style="text-align: center; vertical-align: baseline;">Fidelity</p>
         </div>
 
-        <div >
-        <h1 style="margin-top: 40%;">
-            Fidelity
-        </h1>
+        <div class="container">
+            <div class="center">
+            <h1 style="margin-top: 25%;">
+                Games
+            </h1>
+            <br>
+            <p>
+                Have Some Fun!
+            </p>
         </div>
+      </div>
 
     </body>
 </html>
