--- a/math.html
+++ b/math.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div class="navbar">
-            <a style="float: left; padding-left: 5%;" href="/">Home</a>
-            <a style="float: right; padding-right: 5%;" href="/math.html">Games</a>
+            <a style="float: left; padding-left: 5%; padding-right: 5%;" href="/">Home</a>
+            <a style="float: right; padding-left: 5%; padding-right: 5%;" href="/math.html">Games</a>
             <p style="text-align: center; vertical-align: baseline;">Fidelity</p>
         </div>
 
