pls work for me here

--- a/404.html
+++ b/404.html
@@ -4,26 +4,28 @@
         <link rel="icon" type="image/x-icon" href="https://google.com/favicon.ico">
         <title>Google</title>
         <link rel="stylesheet" href="styles.css">
+
     </head>
+
     <body>
         <div class="navbar">
             <a style="float: left; padding-left: 5%; padding-right: 5%;" href="/">Home</a>
             <a style="float: right; padding-left: 5%; padding-right: 5%;" href="/math.html">Games</a>
             <p style="text-align: center; vertical-align: baseline;">Fidelity</p>
         </div>
+        
+        <div class="container">
+            <div class="center">
+            <h1 style="margin-top: 35%;">
+                Oops!
+            </h1>
+            <p>
+                We couldn't find that link. Sorry!
+            </p>
+            <button onclick="window.location='/';">Visit Page Now</button>
+        </div>
+      </div>
 
-        <br>
-    <div class="container">
-        <div class="center">
-        <h1 style="margin-top: 45%;">
-            Fidelity
-        </h1>
-        <br>
-        <p>
-            A Game Website Made By SwiftQuietKid
-        </p>
-    </div>
-  </div>
+
 
     </body>
-</html>
