--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
             <p>
                 We couldn't find that link. Sorry!
             </p>
-            <button onclick="window.location='/';">Visit Page Now</button>
+            <a class="link-button" href="/">Go Home</a>
         </div>
       </div>
 
