pls work for me :D

--- a/404.html
+++ b/404.html
@@ -15,13 +15,14 @@
         </div>
 
             <div class="center">
-            <h1 style="margin-top: 35%;">
+            <h1 style="margin-top: 25%;">
                 Oops!
             </h1>
             <p>
                 We couldn't find that link. Sorry!
             </p>
-            <a class="link-button" href="/">Go Home</a>
+            <br>
+            <a style="margin-left: 40%; margin-right: 40%;" class="link-button" href="/">Go Home</a>
         </div>
 
 
