please link button :D

--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
                 We couldn't find that link. Sorry!
             </p>
             <br><br>
-            <a style="margin-left: 30%; margin-right: 30%;" class="link-button" href="/">Go Home</a>
+            <a class="link-button" href="/">Go Home</a>
         </div>
 
 
