--- a/hw/index.html
+++ b/hw/index.html
@@ -14,20 +14,12 @@
 
             <div class="center">
             <h1 style="margin-top: 5%;">
-                Games
+                Games Files
             </h1>
             <br>
             <p>
-                Have Some Fun!
+                LMAO ur not supposed to be here
             </p>
         </div>
-
-        <a href="/hw/1v1lol/index.html">
-            <div href="/hw/1v1lol/index.html" class="container">
-                <img href="/hw/1v1lol/index.html" src="/hw/1v1lol/splash.png">
-                <h3>2048</h3>
-            </div>
-            </a>
-
     </body>
 </html>
