--- a/math.html
+++ b/math.html
@@ -20,9 +20,9 @@
             </p>
 
         <a href="/hw/1v1lol/index.html">
-            <div href="/hw/1v1lol/index.html" class="container">
-                <img href="/hw/1v1lol/index.html" src="/hw/1v1lol/splash.png">
-                <h3>2048</h3>
+            <div href="/hw/1v1lol/1v1lol/index.html" class="container">
+                <img href="/hw/1v1lol/1v1lol/index.html" src="/hw/1v1lol/1v1lol/splash.png">
+                <h3>1v1.lol</h3>
             </div>
             </a>
 
