--- a/math.html
+++ b/math.html
@@ -19,7 +19,7 @@
                 Have Some Fun!
             </p>
 
-        <a style="text-decoration: none;" href="/hw/1v1lol/1v1lol/index.html">
+        <a style="text-decoration: none; color: black;" href="/hw/1v1lol/1v1lol/index.html">
             <div href="/hw/1v1lol/1v1lol/index.html" class="container">
                 <img href="/hw/1v1lol/1v1lol/index.html" src="/hw/1v1lol/1v1lol/splash.png">
                 <h3>1v1.lol</h3>
