--- a/math.html
+++ b/math.html
@@ -14,17 +14,17 @@
             <h1 style="margin-top: 5%;">
                 Games
             </h1>
-            <br>
             <p>
                 Have Some Fun!
             </p>
+            <br>
 
-        <a style="text-decoration: none; color: black;" href="/hw/1v1lol/1v1lol/index.html">
-            <div href="/hw/1v1lol/1v1lol/index.html" class="container">
-                <img href="/hw/1v1lol/1v1lol/index.html" src="/hw/1v1lol/1v1lol/splash.png">
+        <a style="text-decoration: none; color: black;" href="/hw/1/1v1lol/index.html">
+            <div href="/hw/1/1v1lol/index.html" class="container">
+                <img href="/hw/1/1v1lol/index.html" src="/hw/1/1v1lol/splash.png">
                 <h3>1v1.lol</h3>
             </div>
-            </a>
+        </a>
 
     </body>
 </html>
