--- a/math.html
+++ b/math.html
@@ -19,9 +19,9 @@
             </p>
             <br>
 
-        <a style="text-decoration: none; color: black;" href="/hw/1/1v1lol/index.html">
-            <div href="/hw/1/1v1lol/index.html" class="container">
-                <img href="/hw/1/1v1lol/index.html" src="/hw/1/1v1lol/splash.png">
+        <a style="text-decoration: none; color: black;" href="/hw/1v1lol/index.html">
+            <div href="/hw/1v1lol/index.html" class="container">
+                <img href="/hw/1v1lol/index.html" src="/hw/1v1lol/splash.png">
                 <h3>1v1.lol</h3>
             </div>
         </a>
