--- a/math.html
+++ b/math.html
@@ -25,13 +25,11 @@
                 <h3>1v1.lol</h3>
             </div>
         </a>
-
-        <a style="text-decoration: none; color: black;" href="/hw/1v1lol/index.html" class="link-container">
-            <div href="/hw/1v1lol/index.html" class="container">
-                <img href="/hw/1v1lol/index.html" src="/hw/1v1lol/splash.png">
-                <h3>1v1.lol</h3>
+            <div class="container">
+                <img src="/hw/1v1lol/splash.png">
+                <a href="/hw/1v1lol/index.html" class="link-container"> 1v1.lol </a>
             </div>
-        </a>
+
 
     </body>
 </html>
