--- a/math.html
+++ b/math.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="icon" type="image/x-icon" href="https://google.com/favicon.ico">
-        <title>Google</title>
+<head>
+    <link rel="icon" type="image/x-icon" href="https://google.com/favicon.ico">
         <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div class="navbar">
-            <a style="float: left; padding-left: 5%; padding-right: 5%;" href="/">Home</a>
-            <a style="float: right; padding-left: 5%; padding-right: 5%;" href="/math.html">Games</a>
-            <p style="text-align: center; vertical-align: baseline;">Fidelity</p>
-        </div>
-            <h1 style="margin-top: 5%;">
-                Games
-            </h1>
-            <p>
-                Have Some Fun!
-            </p>
+</head>
+<body>
+    <div class="navbar">
+        <a style="float: left; padding-left: 5%; padding-right: 5%;" href="/">Home</a>
+        <a style="float: right; padding-left: 5%; padding-right: 5%;" href="/math.html">Games</a>
+        <p style="text-align: center; vertical-align: baseline;">Fidelity</p>
+    </div>
+    <h1 style="margin-top: 5%;">Games</h1>
+    <p>Have Some Fun!</p>
+    <br>
+    <div class="container">
+        <div class="game-box">
+            <img src="/hw/1v1lol/splash.png">
             <br>
+            <a href="/hw/1v1lol/index.html" class="link-container">1v1.lol</a>
+        </div>
 
-            <div class="container">
-                <img src="/hw/1v1lol/splash.png">
-                <br>
-                <a href="/hw/1v1lol/index.html" class="link-container"> 1v1.lol </a>
-            </div>
+        <div class="game-box">
+            <img src="/hw/1v1lol/splash.png">
+            <br>
+            <a href="/hw/1v1lol/index.html" class="link-container">1v1.lol</a>
+        </div>
 
+        <div class="game-box">
+            <img src="/hw/1v1lol/splash.png">
+            <br>
+            <a href="/hw/1v1lol/index.html" class="link-container">1v1.lol</a>
+        </div>
 
-    </body>
+		</div>
+	</div>
+
+</body>
 </html>
