--- a/math.html
+++ b/math.html
@@ -29,7 +29,7 @@
         <div class="game-box">
             <img src="/hw/1v1lol/splash.png">
             <br>
-            <a href="/hw/1v1lol/index.html" class="link-container">1v1.lol</a>
+            <a href="/hw/1v1lol/index.html" class="link-container" style="margin-top: 10%;">1v1.lol</a>
         </div>
 
 		</div>
