--- a/math.html
+++ b/math.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="icon" type="image/x-icon" href="https://google.com/favicon.ico">
+    <title>Google</title>
         <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -29,7 +30,7 @@
         <div class="game-box">
             <img src="/hw/1v1lol/splash.png">
             <br>
-            <a href="/hw/1v1lol/index.html" class="link-container" style="margin-top: 10%;">1v1.lol</a>
+            <a href="/hw/1v1lol/index.html" class="link-container" style="margin-top: 50%;">1v1.lol</a>
         </div>
 
 		</div>
