--- a/math.html
+++ b/math.html
@@ -24,7 +24,7 @@
         <div class="game-box">
             <img src="/hw/1v1lol/splash.png">
             <br>
-            <a href="/hw/1v1lol/index.html" class="link-container">1v1.lol</a>
+            <a style="margin-top: 2%;" href="/hw/1v1lol/index.html" class="link-container">1v1.lol</a>
         </div>
 
         <div class="game-box">
