--- a/math.html
+++ b/math.html
@@ -21,11 +21,15 @@
             <a href="/hw/1v1lol/index.html" class="link-container">1v1.lol</a>
         </div>
 
+        &emsp;
+
         <div class="game-box">
             <img src="/hw/1v1lol/splash.png">
             <br>
             <a style="margin-top: 90%;" href="/hw/1v1lol/index.html" class="link-container">1v1.lol</a>
         </div>
+
+        &emsp;
 
         <div class="game-box">
             <img src="/hw/1v1lol/splash.png">
