--- a/math.html
+++ b/math.html
@@ -21,15 +21,15 @@
             <a href="/hw/1v1lol/index.html" class="link-container">1v1.lol</a>
         </div>
 
-        &emsp;  &emsp;  &emsp;  &emsp;
+        &emsp;  &emsp;  &emsp;  &emsp; &emsp; &emsp; 
 
         <div class="game-box">
-            <img src="/hw/1v1lol/splash.png">
+            <img src="/hw/2048/thumb.png">
             <br>
-            <a style="margin-top: 100%;" href="/hw/1v1lol/index.html" class="link-container">1v1.lol</a>
+            <a style="margin-top: 100%;" href="/hw/2048/index.html" class="link-container">2048</a>
         </div>
 
-        &emsp;  &emsp;  &emsp;  &emsp;
+        &emsp;  &emsp;  &emsp;  &emsp; &emsp; &emsp; 
 
         <div class="game-box">
             <img src="/hw/1v1lol/splash.png">
