--- a/math.html
+++ b/math.html
@@ -26,7 +26,7 @@
         <div class="game-box">
             <img src="/hw/2048/thumb.png">
             <br>
-            <a style="margin-top: 100%;" href="/hw/2048/index.html" class="link-container">2048</a>
+            <a  href="/hw/2048/index.html" class="game-link">2048</a>
         </div>
 
         &emsp;  &emsp;  &emsp;  &emsp; &emsp; &emsp; 
