--- a/math.html
+++ b/math.html
@@ -34,7 +34,7 @@
         <div class="game-box">
             <img src="/hw/1v1lol/splash.png">
             <br>
-            <a href="/hw/1v1lol/index.html" class="link-container" style="vertical-align: text-bottom;">1v1.lol</a>
+            <a href="/hw/1v1lol/index.html" class="link-container" style="position: absolute;">1v1.lol</a>
         </div>
 
 		</div>
